test/types/integral/tooBig.good
tooBig.chpl:1: syntax error: integer literal overflow: '1000000000000000000000000000000' is too big for a 64-bit unsigned integer
