test/types/integral/tooBig.chpl
var i: uint = 1000000000000000000000000000000;

writeln(i);
